implemented UC-06
